# zaprett

./: README.md  update-hosts.json  update-tv.json  update.json  update_extended.json
.github/workflows/: workflow.yml  workflow_without_post.yml
hosts/: hosts
rust/: Cargo.toml
src/: customize.sh
