[workspace.package]
version = "0.0.1"
edition = "2024"
repository = "https://github.com/pumPCin/zaprett"

[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
libc = "0.2.177"
regex = "1.12.2"
rust-ini = "0.21.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sysctl = "0.7.1"
tokio = { version = "1.48.0", features = ["full"] }
once_cell = "1.21.3"
daemonize = "0.5.0"
log = "0.4.28"
pretty_env_logger = "0.5.0"
nix = { version = "0.30.1", features = ["signal"] }
getset = "0.1.6"
sysinfo = "0.37.2"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
strip = true
codegen-units = 1
